daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: dns-resolv-conf-updater
  namespace: kube-system
spec:
  selector:
    matchLabels:
      name: dns-resolv-conf-updater
  template:
    metadata:
      labels:
        name: dns-resolv-conf-updater
    spec:
      containers:
        - name: update-resolv-conf
          image: busybox
          command:
            - sh
            - -c
            - |
              echo "nameserver 8.8.8.8" >> /etc/resolv.conf
              sleep infinity
          volumeMounts:
            - name: etc-resolv
              mountPath: /etc
              mountPropagation: Bidirectional
      volumes:
        - name: etc-resolv
          hostPath:
            path: /etc
      restartPolicy: Always
